add multiple twig pages and output of game

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,1 +1,14 @@
-<p>hola</p>
+{{ include('base.html.twig') }}
+
+<body>
+  <div class='container'>
+
+    <h1>Rock Paper Scissors</h1>
+    <p>To begin Player 1's turn, press the button below!</p>
+
+
+    <a href="/player-one"><button type="submit">Start Game!</button></a>
+
+
+  </div>
+</body>
